--- a/src/app/admin/warning-rules/warning-rules.component.html
+++ b/src/app/admin/warning-rules/warning-rules.component.html
@@ -61,7 +61,8 @@
       </div>
       <div class="form-group">
         <label for="prewarningLevel">预警等级:</label>
-        <select class="form-control" id="prewarningLevel" (change)="selected($event)">
+        <select class="form-control" id="prewarningLevel" (change)="prewarningLevelSelected($event)">
+          <option value="">请选择等级</option>
           <ng-container *ngIf="warningLevelList">
             <option *ngFor="let warningLevel of warningLevelList" [value]="warningLevel.id">
               {{warningLevel.name}}
@@ -71,11 +72,25 @@
       </div>
       <div class="form-group">
         <label for="disaster">灾害类型:</label>
-        <input type="text" id="disaster" class="form-control" formControlName="disaster">
+        <select class="form-control" id="disaster" (change)="typeOfDisasterSelected($event)">
+          <option value="">请选择灾害类型</option>
+          <ng-container *ngIf="typeOfDisasterList">
+            <option *ngFor="let typeOfDisaster of typeOfDisasterList" [value]="typeOfDisaster.id">
+              {{typeOfDisaster.name}}
+            </option>
+          </ng-container>
+        </select>
       </div>
       <div class="form-group">
-        <label for="dataColumn">数据源:</label>
-        <input type="text" id="dataColumn" class="form-control" formControlName="dataColumn">
+        <label for="dataSpot">数据源:</label>
+        <select class="form-control" id="dataSpot" (change)="dataSpotSelected($event)">
+          <option value="">请选择数据源</option>
+          <ng-container *ngIf="dataSpotList">
+            <option *ngFor="let dataSpot of dataSpotList" [value]="dataSpot.id">
+              {{dataSpot.name}}
+            </option>
+          </ng-container>
+        </select>
       </div>
       <div class="form-group">
         <label for="min">最小值:</label>
