--- a/src/app/admin/data-sources/data-sources.component.html
+++ b/src/app/admin/data-sources/data-sources.component.html
@@ -61,7 +61,7 @@
         <ng-select  [multiple]="true"
                     [items]="mapList | ngSelect"
                     (data)="selected($event)"
-                    placeholder="No selected"></ng-select>
+                    placeholder="未选中地图"></ng-select>
        </div>
     </form>
   </div>
