--- a/src/app/oneMaps/oneMaps.component.html
+++ b/src/app/oneMaps/oneMaps.component.html
@@ -9,7 +9,7 @@
     <div id="map"></div>
   </div>
 
-  <footer>
-    <p>这里是底部</p>
-  </footer>
+  <!--<footer>-->
+    <!--<p>这里是底部</p>-->
+  <!--</footer>-->
 </div>
