--- a/src/app/oneMaps/oneMaps.component.css
+++ b/src/app/oneMaps/oneMaps.component.css
@@ -1,11 +1,10 @@
 #map {
   height: 100%;
-  min-height: 500px;
 }
 
 .app-content {
   height: 100%;
-  padding: 70px 0;
+  padding: 70px 0 0;
   overflow: hidden;
 }
 
