--- a/src/app/oneMaps/oneMaps.component.html
+++ b/src/app/oneMaps/oneMaps.component.html
@@ -1,6 +1,6 @@
 <div class="nav" *ngIf="mapsList">
   <ul>
-    <li *ngFor="let map of mapsList" (click)="getMapDetails(map.id)">{{ map.name }}</li>
+    <li *ngFor="let map of mapsList" (click)="getMapDetails(map.id)" [class.active-link]="selectedMapId == map.id">{{ map.name }}</li>
   </ul>
 </div>
 
