--- a/src/app/admin/data-spot/data-spot.component.css
+++ b/src/app/admin/data-spot/data-spot.component.css
@@ -1,3 +1,51 @@
 .search i {
   vertical-align: middle;
 }
+
+.other-value-input {
+  padding: 0.375rem 10px;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.add-other-value {
+  font-size: 20px;
+  vertical-align: middle;
+  cursor: pointer;
+  transition: all .5s;
+}
+.add-other-value:hover {
+  color: #007bff;
+}
+.other-value-list {
+  padding: 0.125rem;
+  max-height: 400px;
+  overflow: auto;
+}
+.other-value-item {
+  width: 100%;
+  font-size: 0;
+}
+.other-value-item:hover {
+  background: rgb(236, 236, 236);
+}
+.other-value-item span {
+  display: inline-block;
+  padding-left: 10px;
+  width: 40%;
+  font-size: 14px;
+  overflow: hidden;
+}
+.other-value-item span.remove-item {
+  width: 20%;
+  cursor: pointer;
+  font-size: 16px;
+}
+.other-value-item span.remove-item:hover {
+  color: red;
+}
