--- a/src/app/admin/data-spot/data-spot.component.html
+++ b/src/app/admin/data-spot/data-spot.component.html
@@ -57,7 +57,7 @@
 <ng-template #Add>
   <div class="modal-header">
     <h4 class="modal-title">新增{{ hintText }}</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="addModalRef.hide()">
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeAddModal()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -69,30 +69,60 @@
         <input type="text" id="name" class="form-control" formControlName="name">
       </div>
       <div class="form-group">
-        <label for="type">类型:</label>
-        <select class="form-control" id="type"  formControlName="inputType">
+        <label for="type">数据源类型:</label>
+        <select class="form-control" id="type"
+                formControlName="inputType"
+                (change)="selectedType($event)">
           <option *ngFor="let type of typeList" [value]="type.id">{{ type.name }}</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="setting">资源配置:</label>
-        <input type="text" id="setting" class="form-control" formControlName="inputSetting">
+      <ng-container [ngSwitch]="selectedInputSourceType">
+        <div class="form-group" *ngSwitchCase="2">
+          <label for="setting">资源配置:</label>
+          <input type="hidden" id="setting" class="form-control" formControlName="inputSetting">
+          <div class="form-row">
+            <div class="col-4">
+              <input type="text" readonly value="文件路径" class="form-control">
+            </div>
+            <div class="col-8">
+              <input type="text" class="form-control"
+                     [(ngModel)]="filePath"
+                     [ngModelOptions]="{standalone: true}">
+            </div>
+          </div>
+        </div>
+        <div class="form-group" *ngSwitchCase="3">
+          <label for="source">监控值:</label>
+          <input type="text" id="source" class="form-control"
+                 formControlName="inputSource"
+                 [(ngModel)]="inputSource">
+        </div>
+      </ng-container>
+      <div class="form-row">
+        <div class="col mb-2" id="map" style="min-height: 300px"></div>
       </div>
-      <div class="form-group">
-        <label for="source">来源:</label>
-        <input type="text" id="source" class="form-control" formControlName="inputSource">
-      </div>
-      <div class="form-group">
-        <label for="longitude">经度:</label>
-        <input type="text" id="longitude" class="form-control" formControlName="longitude">
-      </div>
-      <div class="form-group">
-        <label for="latitude">纬度:</label>
-        <input type="text" id="latitude" class="form-control" formControlName="latitude">
+      <div class="form-row mb-2">
+        <div class="col">
+          <label for="longitude">经度:</label>
+          <input type="text" id="longitude"
+                 class="form-control"
+                 [(ngModel)]="lng"
+                 formControlName="longitude">
+        </div>
+        <div class="col">
+          <label for="latitude">纬度:</label>
+          <input type="text" id="latitude"
+                 class="form-control"
+                 [(ngModel)]="lat"
+                 formControlName="latitude">
+        </div>
       </div>
       <div class="form-group">
         <label for="address">地址:</label>
-        <input type="text" id="address" class="form-control" formControlName="address">
+        <input type="text" id="address"
+               class="form-control"
+               [(ngModel)]="address"
+               formControlName="address">
       </div>
       <div class="form-group">
         <label for="dataSources">数据源(集合):</label>
@@ -132,14 +162,14 @@
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary btn-sm" (click)="addConfirmation(addForm)">确定</button>
-    <button class="btn btn-default btn-sm" (click)="addModalRef.hide()">取消</button>
+    <button class="btn btn-default btn-sm" (click)="closeAddModal()">取消</button>
   </div>
 </ng-template>
 
 <ng-template #Edit>
   <div class="modal-header">
     <h4 class="modal-title">修改{{ hintText }}</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="editModalRef.hide()">
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeEditModal()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -151,26 +181,61 @@
         <input type="text" id="edit-name" class="form-control" formControlName="name">
       </div>
       <div class="form-group">
-        <label for="edit-type">类型:</label>
-        <select class="form-control" id="edit-type"  formControlName="inputType">
+        <label for="edit-type">数据源类型:</label>
+        <select class="form-control"
+                id="edit-type"
+                formControlName="inputType"
+                (change)="selectedType($event)">
           <option *ngFor="let type of typeList" [value]="type.id">{{ type.name }}</option>
         </select>
       </div>
-      <div class="form-group">
-        <label for="edit-setting">资源配置:</label>
-        <input type="text" id="edit-setting" class="form-control" formControlName="inputSetting">
+      <ng-container [ngSwitch]="selectedInputSourceType">
+        <div class="form-group" *ngSwitchCase="2">
+          <label for="edit-setting">资源配置:</label>
+          <input type="hidden" id="edit-setting" class="form-control" formControlName="inputSetting">
+          <div class="form-row">
+            <div class="col-4">
+              <input type="text" readonly value="文件路径" class="form-control">
+            </div>
+            <div class="col-8">
+              <input type="text" class="form-control"
+                     [(ngModel)]="filePath"
+                     [ngModelOptions]="{standalone: true}">
+            </div>
+          </div>
+        </div>
+        <div class="form-group" *ngSwitchCase="3">
+          <label for="edit-source">监控值:</label>
+          <input type="text" id="edit-source" class="form-control"
+                 formControlName="inputSource"
+                 [(ngModel)]="inputSource">
+        </div>
+      </ng-container>
+      <div class="form-row">
+        <div class="col mb-2" id="map" style="min-height: 300px"></div>
       </div>
-      <div class="form-group">
-        <label for="edit-longitude">经度:</label>
-        <input type="text" id="edit-longitude" class="form-control" formControlName="longitude">
-      </div>
-      <div class="form-group">
-        <label for="edit-latitude">纬度:</label>
-        <input type="text" id="edit-latitude" class="form-control" formControlName="latitude">
+      <div class="form-row">
+        <div class="col">
+          <label for="edit-longitude">经度:</label>
+          <input type="text" id="edit-longitude"
+                 class="form-control"
+                 [(ngModel)]="lng"
+                 formControlName="longitude">
+        </div>
+        <div class="col">
+          <label for="edit-latitude">纬度:</label>
+          <input type="text" id="edit-latitude"
+                 class="form-control"
+                 [(ngModel)]="lat"
+                 formControlName="latitude">
+        </div>
       </div>
       <div class="form-group">
         <label for="edit-address">地址:</label>
-        <input type="text" id="edit-address" class="form-control" formControlName="address">
+        <input type="text" id="edit-address"
+               class="form-control"
+               [(ngModel)]="address"
+               formControlName="address">
       </div>
       <div class="form-group">
         <label for="edit-dataSources">数据源(集合):</label>
@@ -208,7 +273,7 @@
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary btn-sm" (click)="editConfirmation(editForm)">确定</button>
-    <button class="btn btn-default btn-sm" (click)="editModalRef.hide()">取消</button>
+    <button class="btn btn-default btn-sm" (click)="closeEditModal()">取消</button>
   </div>
 </ng-template>
 
