--- a/src/app/oneMaps/oneMaps.component.html
+++ b/src/app/oneMaps/oneMaps.component.html
@@ -3,6 +3,7 @@
     <li *ngFor="let map of mapsList"
         (click)="getMapDetails(map.id)"
         [class.active-link]="selectedMapId == map.id">
+      <i class="fa fa-image"></i>
       {{ map.name }}
     </li>
   </ul>
