--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,23 +5,83 @@
   left: 0;
   width: 100%;
   height: 70px;
-  background-color: #007bff;
-  border-bottom: 1px solid #ccc;
+  background-color: #1e2f49;
+  border: 1px solid #5aaadb;
+  box-shadow: 2px 2px 5px rgba(255, 255, 255, .4) inset,
+              -2px -2px 5px rgba(255, 255, 255, .4) inset;
 }
 .header h1 {
+  padding-left: 48px;
   height: 70px;
   line-height: 70px;
-  color: #fff;
-  text-align: center;
-  font-size: 20px;
-}
-.menu-item {
-  position: fixed;
-  top: 15px;
-  right: 15px;
-}
-.menu-item .dropdown-menu {
-  left: -33px !important;
-  min-width: 1rem;
+  color: #63b3fc;
+  font-size: 30px;
 }
 
+/*nav*/
+.nav-bar {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  height: 100%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.nav-bar .nav-item {
+  float: left;
+  position: relative;
+  padding: 14px 0;
+  height: 100%;
+  color: #1d81cd;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all .2s;
+}
+.nav-bar .nav-item:hover {
+  color: #fff;
+}
+.nav-bar .nav-item:hover .nav-menu {
+  display: block;
+}
+.nav-bar .nav-item > div {
+  position: relative;
+  padding: 0 38px;
+  width: 100%;
+  height: 100%;
+  line-height: 40px;
+  border-left: 1px solid #050e1d;
+}
+.nav-bar .nav-item > div:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 1px;
+  height: 100%;
+  background: #567ca1;
+  vertical-align: middle;
+}
+.nav-bar .nav-item > div > i {
+  margin-right: 8px;
+}
+.nav-bar .nav-item .nav-menu {
+  display: none;
+  position: absolute;
+  top: 68px;
+  left: 0;
+  padding-bottom: 26px;
+  width: 100%;
+  height: auto;
+  background-color: #1e2f49;
+  border: 1px solid #5aaadb;
+  box-shadow: 2px 2px 5px rgba(255, 255, 255, .4) inset,
+              -2px -2px 5px rgba(255, 255, 255, .4) inset;
+  text-align: center;
+}
+.nav-bar .nav-item .nav-menu li {
+  padding: 16px 0;
+  border-bottom: 1px dotted #5aaadb;
+}
