--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,45 @@
 <div class="header" *ngIf="authService.checkLogin()">
   <h1>{{title}}</h1>
 
-  <div class="menu-item">
-    <div class="btn-group" dropdown>
-      <button type="button" class="btn btn-primary">{{authService.user.username}}</button>
-      <button type="button" dropdownToggle class="btn btn-primary dropdown-toggle dropdown-toggle-split">
-        <span class="caret"></span>
-        <span class="sr-only">Split button!</span>
-      </button>
-      <ul *dropdownMenu class="dropdown-menu" role="menu">
-        <li role="menuitem" routerLink="/oneMaps">
-          <a class="dropdown-item" href="javascript:void(0);">一张图</a>
-        </li>
-        <li class="divider dropdown-divider"></li>
-        <li role="menuitem" routerLink="/admin">
-          <a class="dropdown-item" href="javascript:void(0);">后台管理</a>
-        </li>
-        <li class="divider dropdown-divider"></li>
-        <li role="menuitem" (click)="loginOut()">
-          <a class="dropdown-item" href="javascript:void(0);">退出</a>
-        </li>
+  <ul class="nav-bar">
+    <li class="nav-item">
+      <div>
+        <i class="fa fa-file-text"></i>
+        <!--放一张图分类-->
+        一张图管理
+        <span class="fa fa-angle-down"></span>
+      </div>
+      <ul class="nav-menu">
+        <li class="nav-menu-item">后台管理</li>
+        <li class="nav-menu-item">后台管理</li>
+        <li class="nav-menu-item">后台管理</li>
       </ul>
-    </div>
-  </div>
+    </li>
+    <li class="nav-item">
+      <div>
+        <i class="fa fa-database"></i>
+        <!--放后台三个数据管理栏-->
+        数据管理
+        <span class="fa fa-angle-down"></span>
+      </div>
+    </li>
+    <li class="nav-item">
+      <div>
+        <i class="fa fa-bell"></i>
+        <!--放后台三个预警管理栏-->
+        预警管理
+        <span class="fa fa-angle-down"></span>
+      </div>
+    </li>
+    <li class="nav-item">
+      <div>
+        <i class="fa fa-user-circle-o"></i>
+        <!--放后台用户管理栏-->
+        用户管理
+        <span class="fa fa-angle-down"></span>
+      </div>
+    </li>
+  </ul>
+
 </div>
 <router-outlet></router-outlet>
