完成一张图的修改

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,11 @@
-<div class="nav">
-  <ul>
-    <li *ngFor="let menu of menuItem" [routerLink]="[menu.url]" routerLinkActive="active-link">
-      <i class="fa fa-cog"></i>
-      {{ menu.title }}
-    </li>
-  </ul>
-</div>
+<!--<div class="nav">-->
+  <!--<ul>-->
+    <!--<li *ngFor="let menu of menuItem" [routerLink]="[menu.url]" routerLinkActive="active-link">-->
+      <!--<i class="fa fa-cog"></i>-->
+      <!--{{ menu.title }}-->
+    <!--</li>-->
+  <!--</ul>-->
+<!--</div>-->
 
 <div class="app-content">
   <router-outlet></router-outlet>
