--- a/src/app/admin/one-maps/one-maps.component.html
+++ b/src/app/admin/one-maps/one-maps.component.html
@@ -18,8 +18,8 @@
       <th>操作</th>
     </thead>
     <tbody *ngIf="oneMapsList">
-      <tr *ngFor="let map of oneMapsList">
-        <td>{{map.id}}</td>
+      <tr *ngFor="let map of oneMapsList, index as idx">
+        <td>{{idx + 1}}</td>
         <td>{{map.name}}</td>
         <td>{{map.longitude}}, {{map.latitude}}</td>
         <td>{{map.zoomLevel}}</td>
@@ -66,6 +66,13 @@
         <label for="priority">优先级:</label>
         <input type="text" id="priority" class="form-control" formControlName="priority">
       </div>
+      <div class="form-group">
+        <label>一张图分类:</label>
+        <ng-select  [multiple]="true"
+                    [items]="oneMapCategoriesList | ngSelect"
+                    (data)="selected($event)"
+                    placeholder="未选中分类"></ng-select>
+      </div>
     </form>
   </div>
   <div class="modal-footer">
@@ -102,6 +109,14 @@
       <div class="form-group">
         <label for="priority1">优先级:</label>
         <input type="text" id="priority1" class="form-control" formControlName="priority">
+      </div>
+      <div class="form-group">
+        <label>一张图分类:</label>
+        <ng-select  [multiple]="true"
+                    [items]="oneMapCategoriesList | ngSelect"
+                    [active]="activeOneMapCategories | ngSelect"
+                    (data)="selected($event)"
+                    placeholder="未选中分类"></ng-select>
       </div>
     </form>
   </div>
