--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,7 @@ td {
   display: none;
 }
 .active-link {
-  background: #1e2f49!important;
+  background: #3786ff!important;
   color: #fff!important;
 }
 /*ng2-select*/
